Add form and friend components and delete functionality

--- a/friends/src/sass/header.sass
+++ b/friends/src/sass/header.sass
@@ -4,10 +4,11 @@ header
   border-bottom: 5px solid $color02
   color: $color01
   display: flex
-  justify-content: space-between;
+  justify-content: space-between
   padding: 1rem
 
 header nav a
+  margin: 0 0.5rem
   transition: 0.25s
 
   &:hover
