--- a/friends/src/sass/index.sass
+++ b/friends/src/sass/index.sass
@@ -1,6 +1,7 @@
 @import ./_reset
 @import ./_variables
 
-@import global
-@import header
-@import login
+@import ./global
+@import ./header
+@import ./login
+@import ./friends
